--- a/static/css/DRD-01/DRD-01.css
+++ b/static/css/DRD-01/DRD-01.css
@@ -1,5 +1,5 @@
 /* home page */
-
+/* All synths */
 .drd-01-synth
 {
     height: 575px;
@@ -8,12 +8,14 @@
     margin:auto;
 }
 
+/* Desktop version */
 #drd-01-synth-large
 {
     width: 730px;
     max-width: 730px;
 }
 
+/* Mobile version */
 #drd-01-synth-small
 {
     height: 550px;
@@ -21,21 +23,21 @@
     max-width: 300px;
 }
 
-#touchstrip-panel
+/* The top half of the synth */
+.MainPanel
 {
-    width: 100%;
-    align-items: center;
+    height: 375px;
 }
 
-#touchstrip {
-    width: 100%;
-    height: 100px;
-    border: 1px solid black;
-    text-align: center;
-    background-color: slategray;
+/* Labels spacing for MainPanel */
+.synth-param
+{
+    width: 75px;
 }
 
-#pills-VoicesPanel-tab
+/* Voices Panel */
+/* Button styling */
+#voices-tab
 {
     background-color: lightblue;
     text-align: center;
@@ -44,42 +46,56 @@
     margin-left: 20px;
 }
 
-#pills-AmpPanel-tab
-{
-    background-color: orange;
-    text-align: center;
-    width: 70px;
-    margin-top: 10px;
-}
-
-#pills-EffectsPanel-tab
-{
-    background-color: red;
-    text-align: center;
-    width: 70px;
-    margin-top: 10px;
-}
-
+/* Label color */
 .voice-label
 {
     color: lightblue;
 }
 
+/* Amp Panel */
+/* Button Styling */
+#amp-tab
+{
+    background-color: gold;
+    text-align: center;
+    width: 70px;
+    margin-top: 10px;
+}
+
+/* Label color */
 .amp-label
 {
     color: gold;
 }
 
+/* FX Panel */
+/* Button Styling */
+#effects-tab
+{
+    background-color: orangered;
+    text-align: center;
+    width: 70px;
+    margin-top: 10px;
+}
+
+/* Label Color */
 .fx-label
 {
     color: orangered;
 }
 
-.synth-param
+/* Touchstrip panel - bottom half of synth */
+#touchstrip-panel
 {
-    width: 75px;
+    width: 100%;
+    align-items: center;
 }
-.MainPanel
-{
-    height: 375px;
+
+/* Touchstrip */
+#touchstrip {
+    width: 100%;
+    height: 100px;
+    border: 1px solid black;
+    text-align: center;
+    background-color: slategray;
 }
