--- a/static/css/DRD-01/DRD-01.css
+++ b/static/css/DRD-01/DRD-01.css
@@ -1,60 +1,5 @@
 /* home page */
-/* All synths */
-.drd-01-synth
-{
-    height: 575px;
-    max-height: 575px;
-    align-content: center;
-    margin:auto;
-}
 
-<<<<<<< HEAD
-/* Desktop version */
-#drd-01-synth-large
-{
-    width: 730px;
-    max-width: 730px;
-}
-
-/* Mobile version */
-#drd-01-synth-small
-{
-    height: 425px;
-    width: 300px;
-    max-width: 300px;
-}
-
-/* The top half of the synth */
-#MainPanel-large
-{
-    height: 375px;
-}
-
-#MainPanel-small
-{
-    height: 250px;
-}
-
-/* Labels spacing for MainPanel */
-.synth-param
-{
-    width: 75px;
-}
-
-/* Voices Panel */
-/* Button styling */
-#voices-tab
-{
-    background-color: lightblue;
-    text-align: center;
-    width: 70px;
-    margin-top: 10px;
-    margin-left: 20px;
-}
-
-/* Label color */
-.voice-label
-=======
 .drd-01-synth
 {
     height: 565px;
@@ -84,25 +29,10 @@
 }
 
 #MainPanel-small
->>>>>>> f67a2dc306dac08654bf0e268dd69f5a133594fe
 {
     height: 250px;
 }
 
-<<<<<<< HEAD
-/* Amp Panel */
-/* Button Styling */
-#amp-tab
-{
-    background-color: gold;
-    text-align: center;
-    width: 70px;
-    margin-top: 10px;
-}
-
-/* Label color */
-.amp-label
-=======
 /* Labels spacing for MainPanel */
 .synth-param
 {
@@ -110,7 +40,6 @@
 }
 
 #touchstrip-panel
->>>>>>> f67a2dc306dac08654bf0e268dd69f5a133594fe
 {
     width: 100%;
     align-items: center;
@@ -149,47 +78,21 @@
     margin-top: 10px;
 }
 
-<<<<<<< HEAD
-/* FX Panel */
-/* Button Styling */
-#effects-tab
-=======
 .oscLabel
 {
     color: lightblue;
 }
 
 .filterLabel
->>>>>>> f67a2dc306dac08654bf0e268dd69f5a133594fe
 {
-    background-color: orangered;
-    text-align: center;
-    width: 70px;
-    margin-top: 10px;
+    color: gold;
 }
 
-/* Label Color */
 .fx-label
 {
     color: orangered;
 }
 
-<<<<<<< HEAD
-/* Touchstrip panel - bottom half of synth */
-#touchstrip-panel
-{
-    width: 100%;
-    align-items: center;
-}
-
-/* Touchstrip */
-#touchstrip {
-    width: 100%;
-    height: 100px;
-    border: 1px solid black;
-    text-align: center;
-    background-color: slategray;
-=======
 .synth-param
 {
     width: 75px;
@@ -197,5 +100,4 @@
 .MainPanel
 {
     height: 425px;
->>>>>>> f67a2dc306dac08654bf0e268dd69f5a133594fe
 }
