--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 /* base template */
 
-body
+.card
 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -17,133 +17,9 @@ body
     margin-bottom: 70px;
 }
 
-#touchstrip
-{
-    width: 100%;
-    background-color: slategray;
-}
-
-.voice-label
-{
-    color: lightblue;
-}
-
-.osc-label
-{
-    color: lightblue;
-}
-
-.filter-label
-{
-    color: lightblue;
-}
-
-.amp-label
-{
-    color: gold;
-}
-
-.env-label
-{
-    color: gold;
-}
-
-.main-label
-{
-    color: gold;
-}
-
-.fx-label
-{
-    color: orangered;
-}
-
-.dly-label
-{
-    color: orangered;
-}
-
-.rvrb-label
-{
-    color: orangered;
-}
-
-/* oblique_strategies */
-
-.os-deck
-{
-    height: 375px;
-    width: 250px;
-}
-
-#deck-text
-{
-    margin-top: 120px;
-}
-
-/* tutorials */
-
-/* msiexec */
-
-.posh-variable
-{
-    color: rgb(219, 150, 0);
-    font-weight: bold;
-}
-
-.directory-tree
-{
-    font-weight: bold;
-    margin-left: 180px;
-}
-
-.topic-list
-{
-    font-weight: bold;
-}
-
-/* Operator Tables */
-.posh-op-table
-{
-    /* max-width: 1000px; */
-}
-
 /* Max_intro */
 .max-intro-video
 {
     max-width: 600px;
     max-height: 600px;
-}
-
-/* max carousel */
-
-.max-carousel-image
-{
-    max-height: 350px;
-}
-
-/* Nav colors */
-.MayaBlue
-{
-    background-color: #55CDFC;
-}
-.White
-{
-    background-color: #FFFFFF;
-}
-.AmaranthPink
-{
-    background-color: #F7A8B8;
-}
-.Yellow
-{
-    background-color: #FCF434;
-}
-.Purple
-{
-    background-color: #9C59D1;
-}
-.Black
-{
-    background-color: #2C2C2C;
 }
