Removed card formatting and replaced with css styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
 /* base template */
 
-.card
+.project
 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;    
 }
 
 .project-description
