Added margin to index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,12 @@
     margin-right: 10%;
 }
 
+.home
+{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 .base-footer
 {
     max-height: 75px;
