--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,8 +76,8 @@
     margin-top:12px;
     margin-left: 16px;
     margin-right: 16px;
-    background-color: darkgray;
-    border: 1px solid white;
+    background-color: #333333;
+    color: darkgray;
   }
 
   .nav-bar-list-logo:hover {
