--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /* base template */
+body
+{
+  background-color: #333333;
+  color: white;
+}
 
 .project
 {
@@ -35,6 +40,7 @@
 .content-div
 {
   margin-bottom: 70px;
+  background-color: #333333;
 }
 
 /* Max_intro */
